# orangesql

./:  - Copy.gitignore  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Comandos Internos.md  Doxyfile.in  Estrutura.md  LICENSE  MIT License  README.md  ROADMAP.md  SECURITY.md  bug_report.md  docs.md  feature_request.md  orangesql.conf  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: console.cpp  console.h  main.cpp
cmake/: OrangeSQLConfig.cmake.in  uninstall.cmake.in
docker/: Dockerfile
engine/: executor_context.h  optimizer.cpp  optimizer.h  query_executor.cpp  query_executor.h
include/: constants.h  status.h  thread_pool.h  types.h  utils.h
index/: btree.cpp  btree.h  btree_node.cpp  btree_node.h  index_manager.cpp  index_manager.h
metadata/: catalog.cpp  catalog.h  schema.cpp  schema.h  statistics.cpp  statistics.h
parser/: ast.h  lexer.cpp  sql_parser.cpp  sql_parser.h
scripts/: build_with_vcpkg.ps1  setup_dev_env.sh
storage/: buffer_pool.cpp  buffer_pool.h  file_manager.cpp  file_manager.h  page.cpp  page.h  record.cpp  table.cpp  table.h
tests/: test_btree.cpp
transaction/: checkpoint.cpp  checkpoint.h  lock_manager.cpp  lock_manager.h  log_manager.cpp  log_manager.h  transaction_manager.cpp  transaction_manager.h  wal.cpp  wal.h
